stated on css addition

--- a/css/indexStyle.css
+++ b/css/indexStyle.css
@@ -1,4 +1,5 @@
 body {
-    background-image: url('');
-    background-color: cornflowerblue
+    /*background-image: url(''); */
+    background-color: #2fb3d4;
 }
+
