worked on pug template

--- a/css/indexStyle.css
+++ b/css/indexStyle.css
@@ -1,5 +1,7 @@
 body {
     /*background-image: url(''); */
-    background-color: #2fb3d4;
+    /* background-color: #2fb3d4; */
+    background-image: url(../images/drizzle.jpg);
+    /* background-color: #5bc7f1; */
 }
 
