--- a/views/index.pug
+++ b/views/index.pug
@@ -2,8 +2,9 @@ doctype html
 html
     head
         title Weather Web App
-        style 
-            include ../css/indexStyle.css
+        style
+            include ../public/css/indexStyle.css
+            
     body#mainBody
         h1 Weather Web App
         form(method='post')
