--- a/public/css/indexStyle.css
+++ b/public/css/indexStyle.css
@@ -1,5 +1,28 @@
 body {
-    background-image: url('clear.jpg');
+    background-image: url(../images/clear.jpg);
     background-color: #69b4a8;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center center;
+    background-size: cover;
 }
 
+#mainTitle {
+    text-align: center;
+}
+
+#weatherPanel {
+    background-color: rgb(223, 223, 223);
+    opacity: 0.8;
+    border-radius: 25px;
+}
+
+#weatherPanel > h2 {
+    color: blue;
+    text-align: center;
+}
+
+#weatherInput {
+    opacity: 1;
+    position: center;
+}
