worked on background image based on weather

--- a/views/index.pug
+++ b/views/index.pug
@@ -4,8 +4,11 @@ html
         title Weather Web App
         style
             include ../public/css/indexStyle.css
+    
+       
+        style body{background-image: url(#{urlPic})}
             
-    body#mainBody
+    body#mainBody 
         div#mainTitle
             h1 Weather Web App
 
