--- a/public/css/indexStyle.css
+++ b/public/css/indexStyle.css
@@ -11,6 +11,16 @@ body {
     text-align: center;
 }
 
+#weatherInput{
+    text-align: center;
+    padding-top: 35px;
+    padding-bottom: 35px;
+}
+
+#weatherString{
+    padding-top: 15px;
+}
+
 #weatherPanel {
     background-color: rgb(223, 223, 223);
     opacity: 0.8;
